# tp4-pauljeann1-master

./: .gitignore  CMakeLists.txt  README.md  TP4.md  TP4.sln
Exo1/: CMakeLists.txt  Exo1.vcxproj  main.c  tp4.h
Exo2/: CMakeLists.txt  Exo2.vcxproj  main.c
Exo3/: CMakeLists.txt  Exo3.vcxproj  main.c
Exo4/: CMakeLists.txt  Exo4.vcxproj  main.c
Exo5/: CMakeLists.txt  Exo5.vcxproj  main.c
Exo6/: CMakeLists.txt  Exo6.vcxproj  Exo6.vcxproj.filters  occurences.c
