# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)

# Include sub-projects.
add_subdirectory ("Exo1")
add_subdirectory ("Exo2")
add_subdirectory ("Exo3")
add_subdirectory ("Exo4")
add_subdirectory ("Exo5")
add_subdirectory ("Exo6")
